2002-06-22  Erez Zadok  <ezk@whitestar.dyn.optonline.net>

	* amd/info_ldap.c (amu_ldap_rebind): don't use ldap_enable_cache()
	if the system doesn't have it.

	* configure.in: detect existence of ldap_enable_cache function,
	because it doesn't exist on Solaris 9's latest ldap libraries. 

	* amd/info_ldap.c: LDAP patches from George Ross
	<gdmr@dcs.ed.ac.uk>.  Rework of old code, support for wildcards in
	LDAP queries, and an FD leak fix.

2002-06-22  Ion Badulescu  <lionut@gonzales.badula.org>

	* buildall: use ksh for configure on aix5.1; pass the extra
	arguments after "--" to configure, not to make

	* Makefile.am: added nfs_prot_aix4_3.h to EXTRA_DIST_CONF

	* conf/mount/mount_aix.c (mount_aix3): if the NFSv3 mount fails
	with EINVAL and we have MOUNT_TYPE_NFS3_BIS defined, retry the
	mount with the alternative nfs3_args structure

	* conf/nfs_prot/nfs_prot_aix4_3.h: added alternative nfs3_args
	structure, similar to that in aix5.1, for a hack that tries to
	compensate for IBM's brain fart

	* conf/nfs_prot/nfs_prot_aix5_1.h: new nfs_prot header for aix5.1+

	* aux/macros/check_nfs_prot_headers.m4: added new header for aix5.1+

	* BUGS: update for direct mounts on Linux; document the brokenness
	of /bin/sh on AIX 5.1 and HP-UX 9

	* NEWS: aix5.1 port, aix4.3 workaround

2002-06-22    <ezk@agora.fsl.cs.sunysb.edu>

	* ltmain.sh: use libtool 1.4d, needed support for newer AIX.

2002-06-21  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* aux/macros/check_autofs_style.m4: enable autofs_v2_v3 for
	all solaris2.6+, not just for 2.[6-8]

	* conf/autofs/autofs_default.h: disable autofs if configure
	detects it

2002-06-21  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* aux/macros/with_addon.m4: correct M4 quoting.

	* aux/macros/cache_check_dynamic.m4: correct M4 quoting.

	* bootstrap: show version of autotools being used.  Helps
	maintainer debugging.

	* configure.in: new proper syntax for libtool and