@@ -336,4 +336,4 @@ _must_ have a timeout 2 orders of magnitude larger than UDP
 
 * George Ross <gdmr@dcs.ed.ac.uk>
 April 29, 2002: Rework of old code, support for wildcards in LDAP queries,
-and an FD leak fix.
+and an FD leak fix.  Amd -A support.
