@@ -38,7 +38,7 @@
 .\"
 .\"	%W% (Berkeley) %G%
 .\"
-.\" $Id: amd.conf.5,v 1.14 2002/01/12 21:01:54 ezk Exp $
+.\" $Id: amd.conf.5,v 1.15 2002/06/22 20:52:45 ezk Exp $
 .\"
 .TH AMD.CONF 5 "7 August 1997"
 .SH NAME
@@ -166,7 +166,9 @@ distributed maps in several locations as needed.
 
 .TP
 .BR arch " (string, default to compiled in value)"
-Allows you to override the value of the
+Same as the
+.B \-A
+option to amd.  Allows you to override the value of the
 .I arch
 amd variable.
 
