@@ -1,5 +1,12 @@
 2002-06-22  Erez Zadok  <ezk@whitestar.dyn.optonline.net>
 
+	* doc/am-utils.texi, scripts/amd.conf.5, scripts/amd.conf-sample,
+	amd/amd.8: document amd -A option. 
+
+	* amd/get_args.c (get_args): support "amd -A arg" option to
+	override the system's detected architecture.  Patch from George
+	Ross <gdmr@dcs.ed.ac.uk>.
+
 	* amd/info_ldap.c (amu_ldap_rebind): don't use ldap_enable_cache()
 	if the system doesn't have it.
 
@@ -34,7 +41,7 @@
 
 	* NEWS: aix5.1 port, aix4.3 workaround
 
-2002-06-22    <ezk@agora.fsl.cs.sunysb.edu>
+2002-06-22 Erez Zadok <ezk@agora.fsl.cs.sunysb.edu>
 
 	* ltmain.sh: use libtool 1.4d, needed support for newer AIX.
 
